Broke portfolio page working on fix standby

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,7 +32,7 @@
             <div class="card">
               <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title"><a href="QuestionGame.html" target="_blanks"a>QuestionGame</h5>
               </div>
             </div>
           </div>
@@ -40,7 +40,7 @@
             <div class="card">
               <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title"><a href="Rps.html" targert ="_blanks"a>Rps</h5>
               </div>
             </div>
           </div>
