--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,6 @@
         <div class="row row-cols-1 row-cols-md-2">
           <div class="col mb-4">
             <div class="card">
-              <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><a href="QuestionGame.html" target="_blanks"a>QuestionGame</h5>
               </div>
@@ -38,7 +37,6 @@
           </div>
           <div class="col mb-4">
             <div class="card">
-              <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><a href="Rps.html" targert ="_blanks"a>Rps</h5>
               </div>
@@ -46,9 +44,8 @@
           </div>
           <div class="col mb-4">
             <div class="card">
-              <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title"><a href="Favoritesongs.html" target="_blanks"a>FavSongs</h5>
               </div>
             </div>
           </div>
