Had to rol back to preveiouse save changed card

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -51,9 +51,8 @@
           </div>
           <div class="col mb-3.5">
             <div class="card">
-              <img src="https://via.placeholder.com/50x50" class="img img-thumbnail" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Wok in progress</h5>
               </div>
             </div>
           </div>
