idk some random save

--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
           <input type="text" id="lname" name="lastname" placeholder="Williams" disabled>
           
           <label for="3mail">Email</label>
-          <input type="text" id="eternetmail" name="Email" placeholder="sommthing@icloud.com" disabled>
+          <input type="text" id="eternetmail" name="Email" placeholder="tyson.williams09@icloud.com" disabled>
 
       
           <label for="subject">Message</label>
