--- a/Portfolio.html
+++ b/Portfolio.html
@@ -52,7 +52,7 @@
           <div class="col mb-3.5">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title"><a href="Favoritesongs.html" target="_blanks"a>Begining Portfolio</h5>
+                <h5 class="card-title"><a href="html-bio-with-css.html" target="_blanks"a>Begining Portfolio</h5>
               </div>
             </div>
           </div>
