--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,9 +13,9 @@
     <div class="topnav">
         <a href="">Tyson</a>
         <div class="topnav-right">
-            <a href="">About me</a>
+            <a href="Aboutme.html">About me</a>
             <a href="Contact.html">Contact</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <a href="">Portfolio</a>
             </div>
         </div>
 </header>
