--- a/Aboutme.html
+++ b/Aboutme.html
@@ -33,7 +33,7 @@
               <img class="img img-thumbnail" src="https://avatars.githubusercontent.com/u/106850086?v=4">
             </div>
             <div class="col-lg-9">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus nemo fugiat debitis voluptates ratione omnis, nobis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate sit alias molestiae. Vitae, voluptatem omnis. Vitae placeat dolorum cumque dolor eligendi facilis a voluptate esse ea, odit, fugiat aperiam id.</p>
+              <p>Hello my Name is Tyson i am a freshman whell sophmore in highschool i have a deep love for anime gammig and coding. my love for coding started at the age of 9 when i first saw someone coding while visiting my aunt in college.</p>
             </div>
             <div class="row">
               <div class="col-lg-12">
