--- a/Aboutme.html
+++ b/Aboutme.html
@@ -33,7 +33,7 @@
               <img class="img img-thumbnail" src="https://avatars.githubusercontent.com/u/106850086?v=4">
             </div>
             <div class="col-lg-9">
-              <p>Hello my Name is Tyson i am a freshman whell sophmore in highschool i have a deep love for anime gammig and coding. my love for coding started at the age of 9 when i first saw someone coding while visiting my aunt in college.</p>
+              <p>Hello my Name is Tyson i am a freshman whell sophmore in highschool i have a deep love for anime gammig and coding. my love for coding started at the age of 9 when i first saw someone coding while visiting my aunt in college. i know how to play 4 instruments guitar piano violin and french horn.</p>
             </div>
             <div class="row">
               <div class="col-lg-12">
