--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,7 +13,7 @@
     <div class="topnav">
         <a href="">Tyson</a>
         <div class="topnav-right">
-            <a href="Aboutme.html">About me</a>
+            <a href="Aboutme.htmlz">About me</a>
             <a href="Contact.html">Contact</a>
             <a href="">Portfolio</a>
             </div>
@@ -52,6 +52,7 @@
           <div class="col mb-3.5">
             <div class="card">
               <div class="card-body">
+                
                 <h5 class="card-title"><a href="html-bio-with-css.html" target="_blanks"a>Begining Portfolio</h5>
               </div>
             </div>
