--- a/Aboutme.html
+++ b/Aboutme.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus nemo fugiat debitis voluptates ratione omnis, nobis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam dolores provident voluptatibus! Facere voluptas beatae nulla. Veniam facere aspernatur, officia nemo quam eligendi rem quaerat ducimus, alias, saepe amet aliquam?</p>
+                <p>I have oen pet a dog and he is a mixed breed he loves barking but now acts like an old man.As i said in teh paragraph above i love to game especialy roblox as its what i used to try and practice before hghschool and this program. During the school year i took an Ap computer science principles class in witch our teacher taught us verry basic javascript along with the requierd content.</p>
               </div>
           </div>
         </div>
