added more contact info

--- a/Contact.html
+++ b/Contact.html
@@ -31,8 +31,9 @@
           <label for="lname">Last Name</label>
           <input type="text" id="lname" name="lastname" placeholder="Williams" disabled>
           
-          <label for="3mail">Email</label>
-          <input type="text" id="eternetmail" name="Email" placeholder="tyson.williams09@icloud.com" disabled>
+          <label for="3mail">Socials</label>
+          <input type="text" id="eternetmail" name="Email" placeholder="Email: tyson.williams09@icloud.com
+          Discord: Tyrone#1791" disabled>
 
       
           <label for="subject">Message</label>
